--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
       </div>
     </nav>
     <a class="page-header__logo">
-      <img class="page-header__logo-image" src="/source/img/logos/upper-logo.png" width="102" height="84"
+      <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
         alt="Логотип Седоны">
     </a>
   </header>
@@ -45,7 +45,7 @@
     <section class="intro">
       <div class="intro__wrapper">
         <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-        <img src="/source/img/logos/intro-logo-small.png" width="282" height="214" alt="Добро пожаловать в Седону">
+        <img src="img/logos/intro-logo-small.png" width="282" height="214" alt="Добро пожаловать в Седону">
       </div>
     </section>
     <section class="advantages">
@@ -61,7 +61,7 @@
               <p class="advantages__counter">— №1 —</p>
               <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <img src="/source/img/photos/city-photo-small.jpg" width="320" height="260" alt="Местные окрестности">
+            <img src="img/photos/city-photo-small.jpg" width="320" height="260" alt="Местные окрестности">
           </li>
           <li class="advantages__item features">
             <ul class="features__list">
@@ -84,7 +84,7 @@
               <p class="advantages__counter">— №2 —</p>
               <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
-            <img src="/source/img/photos/bridge-photo-small.jpg" width="320" height="260" alt="Вид на Мост дьявола">
+            <img src="img/photos/bridge-photo-small.jpg" width="320" height="260" alt="Вид на Мост дьявола">
           </li>
           <li class="advantages__item">
             <div class="advantages__content">
@@ -120,7 +120,7 @@
     </section>
     <section class="map-review">
       <h1 class="visually-hidden">Карта Седоны</h1>
-      <img src="/source/img/map-small.jpg" width="320" height="350" alt="Расположение гостиниц в Седоне">
+      <img src="img/map-small.jpg" width="320" height="350" alt="Расположение гостиниц в Седоне">
     </section>
   </main>
   <footer class="page-footer">
@@ -148,7 +148,7 @@
       <section class="page-footer__copyright">
         <h3 class="visually-hidden">Ссылка на HTML Academy</h3>
         <a href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="/source/img/logos/htmlacademy-logo.svg" alt="HTML Academy">
+          <img src="img/logos/htmlacademy-logo.svg" alt="HTML Academy">
         </a>
       </section>
     </div>
