--- a/source/index.html
+++ b/source/index.html
@@ -50,13 +50,13 @@
     </section>
     <section class="advantages">
       <div class="advantages__wrapper">
-        <header class="advantages__header">
-          <h2>Седона — небольшой городок в Аризоне, <br> заслуживающий большего!</h2>
-          <h3>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h3>
+        <header class="advantages__header page-title">
+          <h2 class="page-title__header">Седона — небольшой городок в Аризоне, <br> заслуживающий большего!</h2>
+          <p class="page-title__content">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </header>
         <ul class="advantages__list">
           <li class="advantages__item">
-            <div class="advantages__content special-content">
+            <div class="advantages__content advantages__content--special">
               <h3 class="advantages__header">Настоящий городок</h3>
               <p class="advantages__counter">— №1 —</p>
               <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
@@ -79,8 +79,8 @@
             </ul>
           </li>
           <li class="advantages__item">
-            <div class="advantages__content special-content">
-              <h3 class="advantages__header">Там есть<br />Мост дьявола</h3>
+            <div class="advantages__content advantages__content--special">
+              <h3 class="advantages__header">Там есть<br>Мост дьявола</h3>
               <p class="advantages__counter">— №2 —</p>
               <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
@@ -112,14 +112,14 @@
     </section>
     <section class="booking-search">
       <div class="booking-search__wrapper">
-        <h1 class="booking-search__header">Заинтересовались?</h1>
+        <h2 class="booking-search__header">Заинтересовались?</h2>
         <p class="booking-search__action">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
           гостиниц в Cедоне</p>
         <button class="booking-search__button" type="button">Поиск гостиницы в Седоне</button>
       </div>
     </section>
     <section class="map-review">
-      <h1 class="visually-hidden">Карта Седоны</h1>
+      <h2 class="visually-hidden">Карта Седоны</h2>
       <img src="img/map-small.jpg" width="320" height="350" alt="Расположение гостиниц в Седоне">
     </section>
   </main>
@@ -128,19 +128,19 @@
       <section class="page-footer__contacts">
         <h2>#visitSEDONA</h2>
       </section>
-      <section class="page-footer__social social">
+      <section class="page-footer__social socials">
         <h3 class="visually-hidden">Ссылки на социальные сети</h3>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__button" href="#"><span class="visually-hidden">Твиттер</span>
+        <ul class="socials__list">
+          <li class="socials__item">
+            <a class="socials__button" href="#"><span class="visually-hidden">Твиттер</span>
             </a>
           </li>
-          <li class="social__item">
-            <a class="social__button" href="#"><span class="visually-hidden">Фейсбук</span>
+          <li class="socials__item">
+            <a class="socials__button" href="#"><span class="visually-hidden">Фейсбук</span>
             </a>
           </li>
-          <li class="social__item">
-            <a class="social__button" href="#"><span class="visually-hidden">Youtube</span>
+          <li class="socials__item">
+            <a class="socials__button" href="#"><span class="visually-hidden">Youtube</span>
             </a>
           </li>
         </ul>
