--- a/source/form.html
+++ b/source/form.html
@@ -85,7 +85,7 @@
           <fieldset class="feedback-form__fieldset fieldset-impression">
             <legend class="feedback-form__legend">Ваше общее впечатление:</legend>
             <div class="fieldset-impression__block">
-              <input type="radio" id="impression-positive" name="fieldset-impression" value="impression-positive">
+              <input type="radio" id="impression-positive" name="fieldset-impression" value="impression-positive" checked>
               <label for="impression-positive">Скорее положительное</label>
               <input type="radio" id="impression-negative" name="fieldset-impression" value="impression-negative">
               <label for="impression-negative">Скорее отрицательное</label>
