--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
             </a>
           </li>
           <li class="navigation__item">
-            <a href="#">
+            <a href="form.html">
               Форма отзыва
             </a>
           </li>
