--- a/source/index.html
+++ b/source/index.html
@@ -12,22 +12,22 @@
       <div class="navigation__wrapper">
         <ul class="navigation__list">
           <li class="navigation__item navigation__item--active">
-            <a>
+            <a class="navigation__link">
               Главная
             </a>
           </li>
           <li class="navigation__item">
-            <a href="#">
+            <a class="navigation__link" href="catalog.html">
               Фото и видео
             </a>
           </li>
           <li class="navigation__item">
-            <a href="form.html">
+            <a class="navigation__link" href="form.html">
               Форма отзыва
             </a>
           </li>
           <li class="navigation__item">
-            <a href="#">
+            <a class="navigation__link" href="https://htmlacademy.ru/intensive/adaptive">
               Html Academy
             </a>
           </li>
@@ -36,8 +36,7 @@
       </div>
     </nav>
     <a class="page-header__logo">
-      <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
-        alt="Логотип Седоны">
+      <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84" alt="Логотип Седоны">
     </a>
   </header>
 
@@ -148,7 +147,12 @@
       <section class="page-footer__copyright">
         <h3 class="visually-hidden">Ссылка на HTML Academy</h3>
         <a href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="img/logos/htmlacademy-logo.svg" alt="HTML Academy">
+          <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg"
+            aria-label="HTML Academy">
+            <path
+              d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z"
+              fill="black" />
+          </svg>
         </a>
       </section>
     </div>
