Стилизовал главную страницу

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -42,17 +42,17 @@
   </header>
 
   <main class="page-main page-catalog">
-    <section class="intro catalog-intro">
-      <div class="catalog-intro__wrapper">
+    <section class="intro">
+      <div class="intro__wrapper">
         <h1 class="visually-hidden">Седона - фото и видео достопримечательностей</h1>
-        <img src="img/logos/logo-small.png" width="229" height="39" alt="Вы определённо в Седоне">
+        <img class="intro__logo" src="img/logos/logo-small.png" width="229" height="39" alt="Вы определённо в Седоне">
       </div>
     </section>
     <section class="photo-catalog">
       <div class="photo-catalog__wrapper">
-        <header class="photo-catalog__header page-title">
-          <h2 class="page-title__header">Фото и видео</h2>
-          <p class="page-title__content">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
+        <header class="photo-catalog__header section-title">
+          <h2 class="section-title__header">Фото и видео</h2>
+          <p class="section-title__content">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
             политике и экономике.</p>
         </header>
         <div class="photo-catalog__item image-container photo-catalog__item--current">
@@ -61,10 +61,10 @@
               alt="Дороги Седоны">
           </a>
           <div class="image-container__info">
-            <div class="image-container__title image-info">
-              <h3 class="image-info__header">Неродные просторы</h3>
-              <p class="image-info__author">Автор фото:</p>
-              <cite class="image-info__author-name">Борис</cite>
+            <div class="image-container__title">
+              <h3 class="image-container__header">Неродные просторы</h3>
+              <p class="image-container__author">Автор фото:</p>
+              <cite class="image-container__author-name">Борис</cite>
             </div>
             <p class="image-container__likes">
               <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -82,10 +82,10 @@
               alt="Флора Седоны">
           </a>
           <div class="image-container__info">
-            <div class="image-container__title image-info">
-              <h3 class="image-info__header">Местная растительность</h3>
-              <p class="image-info__author">Автор фото:</p>
-              <cite class="image-info__author-name">Сергей</cite>
+            <div class="image-container__title">
+              <h3 class="image-container__header">Местная растительность</h3>
+              <p class="image-container__author">Автор фото:</p>
+              <cite class="image-container__author-name">Сергей</cite>
             </div>
             <p class="image-container__likes">
               <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -103,10 +103,10 @@
               alt="Живописная северная часть Седоны">
           </a>
           <div class="image-container__info">
-            <div class="image-container__title image-info">
-              <h3 class="image-info__header">Дорога на север</h3>
-              <p class="image-info__author">Автор фото:</p>
-              <cite class="image-info__author-name">Петр</cite>
+            <div class="image-container__title">
+              <h3 class="image-container__header">Дорога на север</h3>
+              <p class="image-container__author">Автор фото:</p>
+              <cite class="image-container__author-name">Петр</cite>
             </div>
             <p class="image-container__likes">
               <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -124,10 +124,10 @@
               alt="Вид на Мост Дьявола в Седоне">
           </a>
           <div class="image-container__info">
-            <div class="image-container__title image-info">
-              <h3 class="image-info__header">Мост Дьявола</h3>
-              <p class="image-info__author">Автор фото:</p>
-              <cite class="image-info__author-name">Антон</cite>
+            <div class="image-container__title">
+              <h3 class="image-container__header">Мост Дьявола</h3>
+              <p class="image-container__author">Автор фото:</p>
+              <cite class="image-container__author-name">Антон</cite>
             </div>
             <p class="image-container__likes">
               <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -142,9 +142,9 @@
       </div>
     </section>
     <section class="video-box">
-      <header class="video-box__header page-title">
-        <h2 class="page-title__header">Все еще сомневаетесь?</h2>
-        <p class="page-title__content">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+      <header class="video-box__header section-title">
+        <h2 class="section-title__header">Все еще сомневаетесь?</h2>
+        <p class="section-title__content">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
           очередной раз!</p>
       </header>
       <div class="video-box__video">
