--- a/source/form.html
+++ b/source/form.html
@@ -42,17 +42,17 @@
   </header>
 
   <main class="page-main page-form">
-    <section class="intro form-intro">
-      <div class="form-intro__wrapper">
+    <section class="intro">
+      <div class="intro__wrapper">
         <h1 class="visually-hidden">Седона - форма обратной связи</h1>
-        <img src="img/logos/logo-small.png" width="229" height="39" alt="Вы всё еще в Седоне">
+        <img class="intro__logo" src="img/logos/logo-small.png" width="229" height="39" alt="Вы всё еще в Седоне">
       </div>
     </section>
     <section class="feedback-form">
       <div class="feedback-form__wrapper">
-        <header class="feedback-form__header page-title">
-          <h2 class="page-title__header">Оставьте свой отзыв</h2>
-          <p class="page-title__content">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о
+        <header class="feedback-form__header section-title">
+          <h2 class="section-title__header">Оставьте свой отзыв</h2>
+          <p class="section-title__content">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о
             посещенных Вами достопримечательностях</p>
         </header>
         <form class="feedback-form__block" action="https://echo.htmlacademy.ru" method="get" target="_blank">
@@ -128,9 +128,9 @@
       </div>
     </section>
     <section class="modal-success">
-      <header class="modal-success__header page-title">
-        <h2 class="page-title__header">Ваш отзыв отправлен!</h2>
-        <p class="page-title__content">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы
+      <header class="modal-success__header section-title">
+        <h2 class="section-title__header">Ваш отзыв отправлен!</h2>
+        <p class="section-title__content">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы
           опубликуем его на сайте.
         </p>
       </header>
@@ -139,9 +139,9 @@
       </p>
     </section>
     <section class="modal-failure">
-      <header class="modal-failure__header page-title">
-        <h2 class="page-title__header">Что-то пошло не так!</h2>
-        <p class="page-title__content">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
+      <header class="modal-failure__header section-title">
+        <h2 class="section-title__header">Что-то пошло не так!</h2>
+        <p class="section-title__content">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
         </p>
       </header>
       <p class="modal-failure__button-container">
