--- a/source/index.html
+++ b/source/index.html
@@ -4,159 +4,170 @@
 <head>
   <meta charset="utf-8">
   <title>Добро пожаловать в Седону!</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page-body">
-  <header class="page-header">
-    <nav class="navigation">
-      <div class="navigation__wrapper">
-        <ul class="navigation__list">
-          <li class="navigation__item navigation__item--active">
-            <a class="navigation__link">
-              Главная
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="catalog.html">
-              Фото и видео
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="form.html">
-              Форма отзыва
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="https://htmlacademy.ru/intensive/adaptive">
-              Html Academy
-            </a>
-          </li>
-        </ul>
-        <button class="navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      </div>
-    </nav>
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84" alt="Логотип Седоны">
-    </a>
-  </header>
+  <div class="container">
+    <header class="page-header">
+      <nav class="navigation">
+        <div class="navigation__wrapper">
+          <ul class="navigation__list">
+            <li class="navigation__item navigation__item--active">
+              <a class="navigation__link">
+                Главная
+              </a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="catalog.html">
+                Фото и видео
+              </a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="form.html">
+                Форма отзыва
+              </a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="https://htmlacademy.ru/intensive/adaptive">
+                Html Academy
+              </a>
+            </li>
+          </ul>
+          <button class="navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        </div>
+      </nav>
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
+          alt="Логотип Седоны">
+      </a>
+    </header>
 
-  <main class="page-main">
-    <section class="intro">
-      <div class="intro__wrapper">
-        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-        <img src="img/logos/intro-logo-small.png" width="282" height="214" alt="Добро пожаловать в Седону">
-      </div>
-    </section>
-    <section class="advantages">
-      <div class="advantages__wrapper">
-        <header class="advantages__header page-title">
-          <h2 class="page-title__header">Седона — небольшой городок в Аризоне, <br> заслуживающий большего!</h2>
-          <p class="page-title__content">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-        </header>
-        <ul class="advantages__list">
-          <li class="advantages__item">
-            <div class="advantages__content advantages__content--special">
-              <h3 class="advantages__header">Настоящий городок</h3>
-              <p class="advantages__counter">— №1 —</p>
-              <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-            </div>
-            <img src="img/photos/city-photo-small.jpg" width="320" height="260" alt="Местные окрестности">
-          </li>
-          <li class="advantages__item features">
-            <ul class="features__list">
-              <li class="features__item features__item--living">
-                <h3 class="features__header">Жильё</h3>
-                <p class="features__desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-              </li>
-              <li class="features__item features__item--present">
-                <h3 class="features__header">Сувениры</h3>
-                <p class="features__desc">Не только китайского, но и местного производства!</p>
-              </li>
-              <li class="features__item features__item--meal">
-                <h3 class="features__header">Еда</h3>
-                <p class="features__desc">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </ul>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__content advantages__content--special">
-              <h3 class="advantages__header">Там есть<br>Мост дьявола</h3>
-              <p class="advantages__counter">— №2 —</p>
-              <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            </div>
-            <img src="img/photos/bridge-photo-small.jpg" width="320" height="260" alt="Вид на Мост дьявола">
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__content">
-              <h3 class="advantages__header">Небольшая площадь</h3>
-              <p class="advantages__counter">— №3 —</p>
-              <p class="advantages__slogan">Все интересные места находятся очень близко</p>
-            </div>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__content">
-              <h3 class="advantages__header">Красивая дорога</h3>
-              <p class="advantages__counter">— №4 —</p>
-              <p class="advantages__slogan">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </div>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__content">
-              <h3 class="advantages__header">Мало туристов</h3>
-              <p class="advantages__counter">— №5 —</p>
-              <p class="advantages__slogan">Большинство едет в Гранд Каньон и толпится там</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="booking-search">
-      <div class="booking-search__wrapper">
-        <h2 class="booking-search__header">Заинтересовались?</h2>
-        <p class="booking-search__action">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
-          гостиниц в Cедоне</p>
-        <button class="booking-search__button" type="button">Поиск гостиницы в Седоне</button>
-      </div>
-    </section>
-    <section class="map-review">
-      <h2 class="visually-hidden">Карта Седоны</h2>
-      <img src="img/map-small.jpg" width="320" height="350" alt="Расположение гостиниц в Седоне">
-    </section>
-  </main>
-  <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <section class="page-footer__contacts">
-        <h2>#visitSEDONA</h2>
+    <main class="page-main">
+      <section class="intro">
+        <div class="intro__wrapper">
+          <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+          <img class="intro__logo" src="img/logos/intro-logo-small.png" width="282" height="214"
+            alt="Добро пожаловать в Седону">
+        </div>
       </section>
-      <section class="page-footer__social socials">
-        <h3 class="visually-hidden">Ссылки на социальные сети</h3>
-        <ul class="socials__list">
-          <li class="socials__item">
-            <a class="socials__button" href="#"><span class="visually-hidden">Твиттер</span>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__button" href="#"><span class="visually-hidden">Фейсбук</span>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__button" href="#"><span class="visually-hidden">Youtube</span>
-            </a>
-          </li>
-        </ul>
+      <section class="advantages">
+        <div class="advantages__wrapper">
+          <header class="advantages__title section-title">
+            <h2 class="section-title__header">Седона — небольшой городок в Аризоне, <br> заслуживающий большего!</h2>
+            <p class="section-title__content">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+          </header>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <div class="advantages__content advantages__content--special">
+                <h3 class="advantages__header">Настоящий городок</h3>
+                <p class="advantages__counter">— №1 —</p>
+                <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <img class="advantages__photo" src="img/photos/city-photo-small.jpg" width="320" height="260"
+                alt="Местные окрестности">
+            </li>
+            <li class="advantages__item features">
+              <ul class="features__list">
+                <li class="features__item features__item--living">
+                  <h3 class="features__header">Жильё</h3>
+                  <p class="features__desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                </li>
+                <li class="features__item features__item--present">
+                  <h3 class="features__header">Сувениры</h3>
+                  <p class="features__desc">Не только китайского, но и местного производства!</p>
+                </li>
+                <li class="features__item features__item--meal">
+                  <h3 class="features__header">Еда</h3>
+                  <p class="features__desc">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </ul>
+            </li>
+            <li class="advantages__item">
+              <div class="advantages__content advantages__content--special">
+                <h3 class="advantages__header">Там есть Мост дьявола</h3>
+                <p class="advantages__counter">— №2 —</p>
+                <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              </div>
+              <img class="advantages__photo" src="img/photos/bridge-photo-small.jpg" width="320" height="260"
+                alt="Вид на Мост дьявола">
+            </li>
+            <li class="advantages__item">
+              <div class="advantages__content">
+                <h3 class="advantages__header">Небольшая площадь</h3>
+                <p class="advantages__counter">— №3 —</p>
+                <p class="advantages__slogan">Все интересные места находятся очень близко</p>
+              </div>
+            </li>
+            <li class="advantages__item">
+              <div class="advantages__content">
+                <h3 class="advantages__header">Красивая дорога</h3>
+                <p class="advantages__counter">— №4 —</p>
+                <p class="advantages__slogan">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </div>
+            </li>
+            <li class="advantages__item">
+              <div class="advantages__content">
+                <h3 class="advantages__header">Мало туристов</h3>
+                <p class="advantages__counter">— №5 —</p>
+                <p class="advantages__slogan">Большинство едет в Гранд Каньон и толпится там</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="page-footer__copyright">
-        <h3 class="visually-hidden">Ссылка на HTML Academy</h3>
-        <a href="https://htmlacademy.ru/intensive/adaptive">
-          <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg"
-            aria-label="HTML Academy">
-            <path
-              d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z"
-              fill="black" />
-          </svg>
-        </a>
+      <section class="booking-search">
+        <div class="booking-search__wrapper">
+          <h2 class="booking-search__header">Заинтересовались?</h2>
+          <p class="booking-search__action">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+            гостиниц в Cедоне</p>
+          <button class="booking-search__button" type="button">Найти гостиницу</button>
+        </div>
       </section>
-    </div>
-  </footer>
+      <section class="map-review">
+        <h2 class="visually-hidden">Карта Седоны</h2>
+        <iframe class="map-review__iframe"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38018730558!2d-111.86517855273749!3d34.85435832354931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1617322333213!5m2!1sru!2sua"
+          width="320" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+          aria-label="Расположение гостиниц в Седоне"></iframe>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <section class="page-footer__contacts">
+          <h2 class="page-footer__hachtag">#visitSEDONA</h2>
+        </section>
+        <section class="page-footer__social socials">
+          <h3 class="visually-hidden">Ссылки на социальные сети</h3>
+          <ul class="socials__list">
+            <li class="socials__item">
+              <a class="socials__button" href="#"><span class="visually-hidden">Твиттер</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__button" href="#"><span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__button" href="#"><span class="visually-hidden">Youtube</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="page-footer__copyright">
+          <h3 class="visually-hidden">Ссылка на HTML Academy</h3>
+          <span class="page-footer__desc">Разработано</span>
+          <a class="page-footer__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg"
+              aria-label="HTML Academy">
+              <path
+                d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z"
+                fill="black" />
+            </svg>
+          </a>
+        </section>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
