--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Добро пожаловать в Седону!</title>
+  <link rel="icon" href="favicon.ico">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
