Стилизовал страницу каталога

--- a/source/form.html
+++ b/source/form.html
@@ -20,7 +20,7 @@
               </a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="#">
+              <a class="navigation__link" href="catalog.html">
                 Фото и видео
               </a>
             </li>
