--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Добро пожаловать в Седону!</title>
   <link rel="icon" href="favicon.ico">
   <link href="css/style.css" rel="stylesheet">
@@ -39,8 +40,12 @@
         </div>
       </nav>
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
-          alt="Логотип Седоны">
+        <picture class="page-header__picture">
+          <source srcset="img/logos/upper-logo-big.png" media="(min-width: 1200px)" width="187" hight="97">
+          <source srcset="img/logos/upper-logo-middle.png" media="(min-width: 768px)" width="102" hight="84">
+          <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
+            alt="Логотип Седоны">
+        </picture>
       </a>
     </header>
 
@@ -48,8 +53,11 @@
       <section class="intro">
         <div class="intro__wrapper">
           <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-          <img class="intro__logo" src="img/logos/intro-logo-small.png" width="282" height="214"
-            alt="Добро пожаловать в Седону">
+          <picture>
+            <source srcset="img/logos/intro-logo-middle.png" media="(min-width: 768px)" width="461" hight="350">
+            <img class="intro__logo" src="img/logos/intro-logo-small.png" width="282" height="214"
+              alt="Добро пожаловать в Седону">
+          </picture>
         </div>
       </section>
       <section class="advantages">
@@ -65,8 +73,12 @@
                 <p class="advantages__counter">— №1 —</p>
                 <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <img class="advantages__photo" src="img/photos/city-photo-small.jpg" width="320" height="260"
-                alt="Местные окрестности">
+              <picture class="advantages__picture">
+                <source srcset="img/photos/city-photo-big.jpg" media="(min-width: 1200px)" width="800" height="256">
+                <source srcset="img/photos/city-photo-middle.jpg" media="(min-width: 768px)" width="512" height="256">
+                <img class="advantages__photo" src="img/photos/city-photo-small.jpg" width="320" height="260"
+                  alt="Местные окрестности">
+              </picture>
             </li>
             <li class="advantages__item features">
               <ul class="features__list">
@@ -89,8 +101,12 @@
                 <p class="advantages__counter">— №2 —</p>
                 <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
-              <img class="advantages__photo" src="img/photos/bridge-photo-small.jpg" width="320" height="260"
-                alt="Вид на Мост дьявола">
+              <picture class="advantages__picture">
+                <source srcset="img/photos/bridge-photo-big.jpg" media="(min-width: 1200px)" width="800" height="256">
+                <source srcset="img/photos/bridge-photo-middle.jpg" media="(min-width: 768px)" width="512" height="256">
+                <img class="advantages__photo" src="img/photos/bridge-photo-small.jpg" width="320" height="260"
+                  alt="Вид на Мост дьявола">
+              </picture>
             </li>
             <li class="advantages__item">
               <div class="advantages__content">
@@ -135,21 +151,36 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <section class="page-footer__contacts">
-          <h2 class="page-footer__hachtag">#visitSEDONA</h2>
+          <h2>#visitSEDONA</h2>
         </section>
         <section class="page-footer__social socials">
           <h3 class="visually-hidden">Ссылки на социальные сети</h3>
           <ul class="socials__list">
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Твиттер</span>
+                <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z"
+                    fill="white" />
+                </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Фейсбук</span>
+                <svg width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z"
+                    fill="white" />
+                </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Youtube</span>
+                <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z"
+                    fill="white" />
+                </svg>
               </a>
             </li>
           </ul>
